_generated-doc/2.7/config/quarkus-grpc-config-group-config-ssl-server-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-grpc-config-group-config-ssl-server-config_configuration]]link:#quarkus-grpc-config-group-config-ssl-server-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.certificate]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.certificate[quarkus.grpc.server.ssl.certificate]`

[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key[quarkus.grpc.server.ssl.key]`

[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key-store]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key-store[quarkus.grpc.server.ssl.key-store]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files. The key store can be either on classpath or an external file.
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key-store-type]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key-store-type[quarkus.grpc.server.ssl.key-store-type]`

[.description]
--
An optional parameter to specify the type of the key store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key-store-password]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.key-store-password[quarkus.grpc.server.ssl.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.trust-store]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.trust-store[quarkus.grpc.server.ssl.trust-store]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or an external file.
--|path 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.trust-store-type]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.trust-store-type[quarkus.grpc.server.ssl.trust-store-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.trust-store-password]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.trust-store-password[quarkus.grpc.server.ssl.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.
--|string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.cipher-suites]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.cipher-suites[quarkus.grpc.server.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.
--|list of string 
|


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.protocols]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.protocols[quarkus.grpc.server.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.client-auth]]`link:#quarkus-grpc-config-group-config-ssl-server-config_quarkus.grpc.server.ssl.client-auth[quarkus.grpc.server.ssl.client-auth]`

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED
--|`none`, `request`, `required` 
|`none`

|===